[gd_scene load_steps=22 format=3 uid="uid://5up3s28n6s5x"]

[ext_resource type="Script" path="res://scripts/home.gd" id="1_umdvf"]
[ext_resource type="Texture2D" uid="uid://dw2haq0i2g6k6" path="res://Game Icons/PNG/White/2x/import.png" id="2_e0l2c"]
[ext_resource type="Texture2D" uid="uid://coxnlpx0riqi4" path="res://Game Icons/PNG/White/2x/downLeft.png" id="3_3ti0b"]
[ext_resource type="Texture2D" uid="uid://clx5bqn824l1x" path="res://Game Icons/PNG/White/2x/export.png" id="4_ektc5"]
[ext_resource type="Texture2D" uid="uid://2fwbs83imvih" path="res://Game Icons/PNG/White/2x/upRight.png" id="5_7iukd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6im2r"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtnky"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jo0lc"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vko6"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ek3yv"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1lvjw"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p11er"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n04q6"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqhvc"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gi0f1"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bj581"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lpmdx"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tyc06"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6uuj"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3k3cj"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f4o27"]
bg_color = Color(1, 1, 1, 0)

[node name="Home" type="Node"]
script = ExtResource("1_umdvf")

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9, 0.9, 0.9, 1)

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -275.0
offset_right = 172.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Button00" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_hover_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_pressed_color = Color(0.1, 0.1, 0.1, 1)
theme_override_colors/font_focus_color = Color(0.1, 0.1, 0.1, 1)
theme_override_colors/font_color = Color(0, 0, 0.501961, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0.501961, 1)
theme_override_colors/icon_focus_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/icon_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/icon_hover_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_6im2r")
theme_override_styles/hover = SubResource("StyleBoxFlat_mtnky")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jo0lc")
theme_override_styles/normal = SubResource("StyleBoxFlat_5vko6")
text = "New Pickups"
icon = ExtResource("2_e0l2c")
autowrap_mode = 3
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Button01" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_hover_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_focus_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 0.5, 0, 1)
theme_override_colors/icon_focus_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/icon_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/icon_hover_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ek3yv")
theme_override_styles/hover = SubResource("StyleBoxFlat_1lvjw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p11er")
theme_override_styles/normal = SubResource("StyleBoxFlat_n04q6")
text = "Ongoing Pickups"
icon = ExtResource("3_3ti0b")
autowrap_mode = 3
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Button02" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_hover_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_focus_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 0.5, 0, 1)
theme_override_colors/icon_focus_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/icon_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/icon_hover_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_iqhvc")
theme_override_styles/hover = SubResource("StyleBoxFlat_gi0f1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bj581")
theme_override_styles/normal = SubResource("StyleBoxFlat_lpmdx")
text = "New Delivers"
icon = ExtResource("4_ektc5")
autowrap_mode = 3
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Button03" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_hover_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_focus_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_color = Color(0, 0, 0.501961, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0.501961, 1)
theme_override_colors/icon_focus_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/icon_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/icon_hover_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_tyc06")
theme_override_styles/hover = SubResource("StyleBoxFlat_q6uuj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3k3cj")
theme_override_styles/normal = SubResource("StyleBoxFlat_f4o27")
text = "Ongoing Delivers"
icon = ExtResource("5_7iukd")
autowrap_mode = 3
icon_alignment = 1
vertical_icon_alignment = 0
